feat: update
CHANGES:
- Add checkDMARC, evil-winrm-py, apk2url, BurpsuitePro
- Update Wappalyzer
- Modify functions names